# mcpfw

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: how-to.md
examples/: claude-code-config.json  kiro-mcp-config.json
mcpfw/: __init__.py  __main__.py  audit.py  cli.py  policy.py  proxy.py  session.py
mcpfw/rules/: rate_limit.py  response_scanner.py
policies/: paranoid.yaml  permissive.yaml  standard.yaml
tests/: interactive_demo.py  mock_server.py  send_calls.py  test_mcpfw.py
